# home_bookkeeping

./: CMakeLists.txt  README.md  aboutwindow.ui  instructionwindow.cpp  instructionwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  about_window.cpp  about_window.h  calendar_info.cpp  calendar_info.h  calendar_menu.cpp  calendar_menu.h  changepass_menu.cpp  changepass_menu.h  clickable_label.cpp  clickable_label.h  connector_data.cpp  connector_data.h  day_info.cpp  day_info.h  dayinfo.cpp  dayinfo.h  dayinfo_label.cpp  dayinfo_label.h  dayinfo_window.cpp  dayinfo_window.h  instruction_window.cpp  instruction_window.h  login_menu.cpp  login_menu.h  main.cpp  main_window.cpp  main_window.h  registration_menu.cpp  registration_menu.h  ui_about_window.h  ui_instruction_window.h  ui_main_window.h
